<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, JPush!</string>
    <string name="app_name">JPush SDK Demo</string>
    <string name="tag_hint">Tag can be number, alphabet, underscore, Chinese. Use , to split many tags.</string>
    <string name="alias_hint">Alias can be number, alphabet, underscore, Chinese.</string>
    <string name="mobilenumber_hint">The phone number can only start with a "+" or a number,other can only contain "-" and Numbers</string>
    <string name="style_hint">style should be number</string>
    <string name="error_style_empty">style cannot be empty</string>
    <string name="error_alias_empty">alias cannot be empty</string>
    <string name="error_tag_empty">tag cannot be empty</string>
    <string name="error_tag_gs_empty">Invalid format</string>
    <string name="mobilenumber_empty_guide">will clear last set phone number</string>
    <string name="error_network">Failed to init due to network exception.</string>
    <string name="logining">Running in background. Please see log.</string>
    <string name="setting_su">Succeed to set</string>


    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="set_alias">设置别名</string>
    <string name="unset_alias">撤销别名</string>
    <string name="set_account">设置帐号</string>
    <string name="unset_account">撤销帐号</string>
    <string name="subscribe_topic">订阅标签</string>
    <string name="unsubscribe_topic">撤销标签</string>
    <string name="set_accept_time">设置时间</string>
    <string name="pause_push">暂停推送</string>
    <string name="resume_push">恢复推送</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="register_success">Register push success.</string>
    <string name="register_fail">Register push fail.</string>
    <string name="recv_passthrough_message"> Receive a passthrough message. Content is \"%1$s\"</string>
    <string name="click_notification_message"> Clicked a notification message. Content is \"%1$s\"</string>
    <string name="arrive_notification_message"> Arrived a notification message. Content is \"%1$s\"</string>
    <string name="set_alias_success"> Set alias \"%1$s\" success.</string>
    <string name="set_alias_fail"> Set alias fail for %1$s.</string>
    <string name="unset_alias_success"> Unset alias \"%1$s\" success.</string>
    <string name="unset_alias_fail"> Unset alias fail for %1$s.</string>
    <string name="set_account_success"> Set account \"%1$s\" success.</string>
    <string name="set_account_fail"> Set account fail for %1$s.</string>
    <string name="unset_account_success"> Unset account \"%1$s\" success.</string>
    <string name="unset_account_fail"> Unset account fail for %1$s.</string>
    <string name="subscribe_topic_success"> Subscribe topic \"%1$s\" success.</string>
    <string name="subscribe_topic_fail"> Subscribe topic fail for %1$s.</string>
    <string name="unsubscribe_topic_success"> Unsubscribe topic \"%1$s\" success.</string>
    <string name="unsubscribe_topic_fail"> Unsubscribe topic fail for %1$s.</string>
    <string name="set_accept_time_success"> Set accept time %1$s - %2$s success.</string>
    <string name="set_accept_time_fail"> Set accept time fail for %1$s.</string>





    <string name="version_info">版本信息</string>
    <string name="about">关于</string>
    <string name="switcher">switcher</string>
    <string name="log">log</string>
    <string name="switch_mode">切换模式</string>
    <string name="test">测试模式</string>
    <string name="develop">开发模式</string>
    <string name="release">正式模式</string>
    <string name="msg_app">透传消息</string>
    <string name="notify_p2p">单点通知</string>
    <string name="msg_p2p">单点透传</string>
    <string name="msg_noti">通知消息</string>
    <string name="debug">打开打印</string>
    <string name="normal">关闭打印</string>
    <string name="switch_server">切换IP</string>
    <string name="start">打开连接</string>
    <string name="close">关闭连接</string>

    <string name="get_device_id">设备ID</string>
    <string name="get_push_status">服务状态</string>
    <string name="get_all_alias">别名列表</string>
    <string name="get_all_account">账号列表</string>
    <string name="subscribe_tag">订阅标签</string>
    <string name="unsubscribe_tag">注销标签</string>
    <string name="get_all_tag">标签列表</string>

    <string name="register">注册</string>
    <string name="unregister">注销</string>
    <string name="set_push_time">推送时间</string>
    <string name="clear_notify">清除通知</string>
    <string name="clear_all_notify">清空通知</string>

    <!---->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tab_base_info">基础信息</string>
    <string name="tab_user_banding">用户绑定</string>
    <string name="tab_push_config">推送设置</string>
    <!--一些展示界面的默认值-->
    <string name="default_opush_contact_info">1.Opush公测QQ群：281878461\n2.Opush开放平台：<a href="https://push.oppo.com">https://push.oppo.com</a></string>
    <string name="default_introduction">1.应用注册/注销、别名、标签绑定等功能实现\n2.推送状态、通知栏状态、版本信息查询\n3.推送时间设置、推送接受设定\n4.支持Webview打开H5页面等功能\n5.支持处理透传消息，解析透传规则</string>
    <string name="default_opush_company_name">深圳云中飞网络科技有限公司</string>
    <string name="week_day_1">周一</string>
    <string name="week_day_2">周二 </string>
    <string name="week_day_3">周三</string>
    <string name="week_day_4">周四</string>
    <string name="week_day_5">周五</string>
    <string name="week_day_6">周六</string>
    <string name="week_day_7">周日</string>
    <!---->
    <string name="menu_open_by_browser">在浏览器打开</string>
    <string name="menu_copy_url">复制链接URL</string>

</resources>
