<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/set_alias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_button"
            android:background="@drawable/all_btn"
            android:paddingLeft="@dimen/set_padding"
            android:paddingRight="@dimen/set_padding"
            android:text="@string/set_alias"
            android:textSize="@dimen/text_btn_size" />

        <Button
            android:id="@+id/set_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin_button"
            android:background="@drawable/all_btn"
            android:paddingLeft="@dimen/set_padding"
            android:paddingRight="@dimen/set_padding"
            android:text="@string/set_account"
            android:textSize="@dimen/text_btn_size" />

        <Button
            android:id="@+id/subscribe_topic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_button"
            android:background="@drawable/all_btn"
            android:paddingLeft="@dimen/set_padding"
            android:paddingRight="@dimen/set_padding"
            android:text="@string/subscribe_topic"
            android:textSize="@dimen/text_btn_size" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/unset_alias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_button"
            android:background="@drawable/all_btn"
            android:paddingLeft="@dimen/set_padding"
            android:paddingRight="@dimen/set_padding"
            android:text="@string/unset_alias"
            android:textSize="@dimen/text_btn_size" />

        <Button
            android:id="@+id/unset_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_button"
            android:background="@drawable/all_btn"
            android:paddingLeft="@dimen/set_padding"
            android:paddingRight="@dimen/set_padding"
            android:text="@string/unset_account"
            android:textSize="@dimen/text_btn_size" />

        <Button
            android:id="@+id/unsubscribe_topic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_button"
            android:background="@drawable/all_btn"
            android:paddingLeft="@dimen/set_padding"
            android:paddingRight="@dimen/set_padding"
            android:text="@string/unsubscribe_topic"
            android:textSize="@dimen/text_btn_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/pause_push"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_button"
            android:background="@drawable/all_btn"
            android:paddingLeft="@dimen/set_padding"
            android:paddingRight="@dimen/set_padding"
            android:text="@string/pause_push"
            android:textSize="@dimen/text_btn_size" />

        <Button
            android:id="@+id/resume_push"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_button"
            android:background="@drawable/all_btn"
            android:paddingLeft="@dimen/set_padding"
            android:paddingRight="@dimen/set_padding"
            android:text="@string/resume_push"
            android:textSize="@dimen/text_btn_size" />

        <Button
            android:id="@+id/set_accept_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_button"
            android:background="@drawable/all_btn"
            android:paddingLeft="@dimen/set_padding"
            android:paddingRight="@dimen/set_padding"
            android:text="@string/set_accept_time"
            android:textSize="@dimen/text_btn_size" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dp"
        android:scrollbars="vertical">

        <TextView
            android:id="@+id/log"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:singleLine="false"
            android:textSize="@dimen/text_size" />
    </ScrollView>

</LinearLayout>
