<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="每周可接受消息时间"
        android:textSize="@dimen/default_text_size"/>

    <LinearLayout
        android:id="@+id/ll_weekday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ToggleButton
            android:id="@+id/btn_monday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onPushTimeConfigChange"
            android:tag="1"
            android:text="@string/week_day_1"
            android:textOff="@string/week_day_1"
            android:textOn="@string/week_day_1"
            android:textSize="@dimen/default_text_size"/>

        <ToggleButton
            android:id="@+id/btn_tuesday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onPushTimeConfigChange"
            android:tag="2"
            android:text="@string/week_day_2"
            android:textOff="@string/week_day_2"
            android:textOn="@string/week_day_2"/>

        <ToggleButton
            android:id="@+id/btn_wednesday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onPushTimeConfigChange"
            android:tag="3"
            android:text="@string/week_day_3"
            android:textOff="@string/week_day_3"
            android:textOn="@string/week_day_3"
            android:textSize="@dimen/default_text_size"/>

        <ToggleButton
            android:id="@+id/btn_thursday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onPushTimeConfigChange"
            android:tag="4"
            android:text="@string/week_day_4"
            android:textOff="@string/week_day_4"
            android:textOn="@string/week_day_4"
            android:textSize="@dimen/default_text_size"/>

        <ToggleButton
            android:id="@+id/btn_friday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onPushTimeConfigChange"
            android:tag="5"
            android:text="@string/week_day_5"
            android:textOff="@string/week_day_5"
            android:textOn="@string/week_day_5"
            android:textSize="@dimen/default_text_size"/>

        <ToggleButton
            android:id="@+id/btn_staurday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onPushTimeConfigChange"
            android:tag="6"
            android:text="@string/week_day_6"
            android:textOff="@string/week_day_6"
            android:textOn="@string/week_day_6"
            android:textSize="@dimen/default_text_size"/>

        <ToggleButton
            android:id="@+id/btn_sunday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onPushTimeConfigChange"
            android:tag="7"
            android:text="@string/week_day_7"
            android:textOff="@string/week_day_7"
            android:textOn="@string/week_day_7"
            android:textSize="@dimen/default_text_size"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="4dp"
        android:text="每天接受消息时间"
        android:textSize="@dimen/default_text_size"/>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/shape_bg_white_with_gray_ring"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_push_time_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="00:00"/>

        <TextView
            android:id="@+id/tv_push_time_split"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="0"
            android:gravity="center"
            android:text="-"/>

        <TextView
            android:id="@+id/tv_push_time_end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="left"
            android:text="23:59"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_pause_push"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onButtonClick"
            android:text="暂停推送"/>

        <Button
            android:id="@+id/btn_resume_push"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onButtonClick"
            android:text="恢复推送"/>

    </LinearLayout>


</LinearLayout>
